

syntax = "proto3";

package ttn.lorawan.v3;

import "ttn/lorawan/v3/client.proto";
import "ttn/lorawan/v3/rights.proto";

option go_package = "go.thethings.network/lorawan-stack/v3/pkg/ttnpb";

// CreateClientEmailMessage is used as a wrapper for handling the email regarding the create client procedure.
message CreateClientEmailMessage {
  CreateClientRequest create_client_request = 1;
  APIKey api_key = 2;
}
